cmake_minimum_required(VERSION 2.6)
project(sensord-plugins CXX)

INCLUDE(FindPkgConfig)
PKG_CHECK_MODULES(plugin_pkgs REQUIRED dlog libxml-2.0)

FOREACH(flag ${plugin_pkgs_LDFLAGS})
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${flag}")
ENDFOREACH(flag)

FOREACH(flag ${plugin_pkgs_CFLAGS})
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${flag}")
ENDFOREACH(flag)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")

include_directories(${CMAKE_CURRENT_SOURCE_DIR})
include_directories(${CMAKE_SOURCE_DIR}/src/server)
include_directories(${CMAKE_SOURCE_DIR}/src/shared)

IF("${ACCEL}" STREQUAL "ON")
list (APPEND DIR_INCLUDE "${CMAKE_CURRENT_SOURCE_DIR}/accel")
include_directories(${CMAKE_SOURCE_DIR}/src/server/plugins/accel)
list (APPEND PLUGIN_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/accel/accel_sensor.cpp")
add_definitions(-DENABLE_ACCEL)
ENDIF()
IF("${GYRO}" STREQUAL "ON")
list (APPEND DIR_INCLUDE "${CMAKE_CURRENT_SOURCE_DIR}/gyro")
include_directories(${CMAKE_SOURCE_DIR}/src/server/plugins/gyro)
list (APPEND PLUGIN_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/gyro/gyro_sensor.cpp")
add_definitions(-DENABLE_GYRO)
ENDIF()
IF("${PROXI}" STREQUAL "ON")
list (APPEND DIR_INCLUDE "${CMAKE_CURRENT_SOURCE_DIR}/proxi")
include_directories(${CMAKE_SOURCE_DIR}/src/server/plugins/proxi)
list (APPEND PLUGIN_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/proxi/proxi_sensor.cpp")
add_definitions(-DENABLE_PROXI)
ENDIF()
IF("${LIGHT}" STREQUAL "ON")
list (APPEND DIR_INCLUDE "${CMAKE_CURRENT_SOURCE_DIR}/light")
include_directories(${CMAKE_SOURCE_DIR}/src/server/plugins/light)
list (APPEND PLUGIN_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/light/light_sensor.cpp")
add_definitions(-DENABLE_LIGHT)
ENDIF()
IF("${GEO}" STREQUAL "ON")
list (APPEND DIR_INCLUDE "${CMAKE_CURRENT_SOURCE_DIR}/geo")
include_directories(${CMAKE_SOURCE_DIR}/src/server/plugins/geo)
list (APPEND PLUGIN_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/geo/geo_sensor.cpp")
add_definitions(-DENABLE_GEO)
ENDIF()
IF("${AUTO_ROTATION}" STREQUAL "ON")
list (APPEND DIR_INCLUDE "${CMAKE_CURRENT_SOURCE_DIR}/auto_rotation")
include_directories(${CMAKE_SOURCE_DIR}/src/server/plugins/auto_rotation)
list (APPEND PLUGIN_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/auto_rotation/auto_rotation_alg.cpp")
list (APPEND PLUGIN_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/auto_rotation/auto_rotation_alg_emul.cpp")
list (APPEND PLUGIN_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/auto_rotation/auto_rotation_sensor.cpp")
add_definitions(-DENABLE_AUTO_ROTATION)
ENDIF()
IF("${PRESSURE}" STREQUAL "ON")
list (APPEND DIR_INCLUDE "${CMAKE_CURRENT_SOURCE_DIR}/pressure")
include_directories(${CMAKE_SOURCE_DIR}/src/server/plugins/pressure)
list (APPEND PLUGIN_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/pressure/pressure_sensor.cpp")
add_definitions(-DENABLE_PRESSURE)
ENDIF()
IF("${TEMPERATURE}" STREQUAL "ON")
list (APPEND DIR_INCLUDE "${CMAKE_CURRENT_SOURCE_DIR}/temperature")
include_directories(${CMAKE_SOURCE_DIR}/src/server/plugins/temperature)
list (APPEND PLUGIN_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/temperature/temperature_sensor.cpp")
add_definitions(-DENABLE_TEMPERATURE)
ENDIF()
IF("${ULTRAVIOLET}" STREQUAL "ON")
list (APPEND DIR_INCLUDE "${CMAKE_CURRENT_SOURCE_DIR}/ultraviolet")
include_directories(${CMAKE_SOURCE_DIR}/src/server/plugins/ultraviolet)
list (APPEND PLUGIN_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/ultraviolet/ultraviolet_sensor.cpp")
add_definitions(-DENABLE_ULTRAVIOLET)
ENDIF()
IF("${BIO_LED_RED}" STREQUAL "ON")
list (APPEND DIR_INCLUDE "${CMAKE_CURRENT_SOURCE_DIR}/bio_led_red")
include_directories(${CMAKE_SOURCE_DIR}/src/server/plugins/bio_led_red)
list (APPEND PLUGIN_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/bio_led_red/bio_led_red_sensor.cpp")
add_definitions(-DENABLE_BIO_LED_RED)
ENDIF()
IF("${ORIENTATION}" STREQUAL "ON")
set(SENSOR_FUSION_ENABLE "1")
set(ORIENTATION_ENABLE "1")
ENDIF()
IF("${RV}" STREQUAL "ON")
set(SENSOR_FUSION_ENABLE "1")
set(RV_ENABLE "1")
ENDIF()
IF("${GEOMAGNETIC_RV}" STREQUAL "ON")
set(SENSOR_FUSION_ENABLE "1")
set(GEOMAGNETIC_RV_ENABLE "1")
ENDIF()
IF("${GAMING_RV}" STREQUAL "ON")
set(SENSOR_FUSION_ENABLE "1")
set(GAMING_RV_ENABLE "1")
ENDIF()
IF("${TILT}" STREQUAL "ON")
set(SENSOR_FUSION_ENABLE "1")
set(TILT_ENABLE "1")
ENDIF()
IF("${UNCAL_GYRO}" STREQUAL "ON")
set(SENSOR_FUSION_ENABLE "1")
set(UNCAL_GYRO_ENABLE "1")
ENDIF()
IF("${GRAVITY}" STREQUAL "ON")
set(SENSOR_FUSION_ENABLE "1")
set(ORIENTATION_ENABLE "1")
set(GRAVITY_ENABLE "1")
ENDIF()
IF("${LINEAR_ACCEL}" STREQUAL "ON")
set(SENSOR_FUSION_ENABLE "1")
set(ORIENTATION_ENABLE "1")
set(GRAVITY_ENABLE "1")
set(LINEAR_ACCEL_ENABLE "1")
ENDIF()
IF("${SENSOR_FUSION_ENABLE}" STREQUAL "1")
list (APPEND DIR_INCLUDE "${CMAKE_CURRENT_SOURCE_DIR}/sensor_fusion")
include_directories(${CMAKE_SOURCE_DIR}/src/server/plugins/sensor_fusion)
list (APPEND PLUGIN_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/sensor_fusion/euler_angles.cpp")
list (APPEND PLUGIN_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/sensor_fusion/matrix.cpp")
list (APPEND PLUGIN_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/sensor_fusion/orientation_filter.cpp")
list (APPEND PLUGIN_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/sensor_fusion/quaternion.cpp")
list (APPEND PLUGIN_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/sensor_fusion/rotation_matrix.cpp")
list (APPEND PLUGIN_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/sensor_fusion/sensor_data.cpp")
list (APPEND PLUGIN_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/sensor_fusion/vector.cpp")
list (APPEND DIR_INCLUDE "${CMAKE_CURRENT_SOURCE_DIR}/fusion")
include_directories(${CMAKE_SOURCE_DIR}/src/server/plugins/fusion)
list (APPEND PLUGIN_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/fusion/fusion_sensor.cpp")
add_definitions(-DENABLE_SENSOR_FUSION)
ENDIF()
IF("${ORIENTATION_ENABLE}" STREQUAL "1")
list (APPEND DIR_INCLUDE "${CMAKE_CURRENT_SOURCE_DIR}/orientation")
include_directories(${CMAKE_SOURCE_DIR}/src/server/plugins/orientation)
list (APPEND PLUGIN_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/orientation/orientation_sensor.cpp")
add_definitions(-DENABLE_ORIENTATION)
ENDIF()
IF("${GRAVITY_ENABLE}" STREQUAL "1")
list (APPEND DIR_INCLUDE "${CMAKE_CURRENT_SOURCE_DIR}/gravity")
include_directories(${CMAKE_SOURCE_DIR}/src/server/plugins/gravity)
list (APPEND PLUGIN_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/gravity/gravity_sensor.cpp")
add_definitions(-DENABLE_GRAVITY)
ENDIF()
IF("${LINEAR_ACCEL_ENABLE}" STREQUAL "1")
list (APPEND DIR_INCLUDE "${CMAKE_CURRENT_SOURCE_DIR}/linear_accel")
include_directories(${CMAKE_SOURCE_DIR}/src/server/plugins/linear_accel)
list (APPEND PLUGIN_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/linear_accel/linear_accel_sensor.cpp")
add_definitions(-DENABLE_LINEAR_ACCEL)
ENDIF()
IF("${TILT_ENABLE}" STREQUAL "1")
list (APPEND DIR_INCLUDE "${CMAKE_CURRENT_SOURCE_DIR}/tilt")
include_directories(${CMAKE_SOURCE_DIR}/src/server/plugins/tilt)
list (APPEND PLUGIN_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/tilt/tilt_sensor.cpp")
add_definitions(-DENABLE_TILT)
ENDIF()
IF("${UNCAL_GYRO_ENABLE}" STREQUAL "1")
list (APPEND DIR_INCLUDE "${CMAKE_CURRENT_SOURCE_DIR}/uncal_gyro")
include_directories(${CMAKE_SOURCE_DIR}/src/server/plugins/uncal_gyro)
list (APPEND PLUGIN_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/uncal_gyro/uncal_gyro_sensor.cpp")
add_definitions(-DENABLE_UNCAL_GYRO)
ENDIF()
IF("${RV_ENABLE}" STREQUAL "1")
list (APPEND DIR_INCLUDE "${CMAKE_CURRENT_SOURCE_DIR}/rotation_vector/rv")
include_directories(${CMAKE_SOURCE_DIR}/src/server/plugins/rotation_vector/rv)
list (APPEND PLUGIN_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/rotation_vector/rv/rv_sensor.cpp")
add_definitions(-DENABLE_RV)
ENDIF()
IF("${GEOMAGNETIC_RV_ENABLE}" STREQUAL "1")
list (APPEND DIR_INCLUDE "${CMAKE_CURRENT_SOURCE_DIR}/rotation_vector/geomagnetic_rv")
include_directories(${CMAKE_SOURCE_DIR}/src/server/plugins/rotation_vector/geomagnetic_rv)
list (APPEND PLUGIN_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/rotation_vector/geomagnetic_rv/geomagnetic_rv_sensor.cpp")
add_definitions(-DENABLE_GEOMAGNETIC_RV)
ENDIF()
IF("${GAMING_RV_ENABLE}" STREQUAL "1")
list (APPEND DIR_INCLUDE "${CMAKE_CURRENT_SOURCE_DIR}/rotation_vector/gaming_rv")
include_directories(${CMAKE_SOURCE_DIR}/src/server/plugins/rotation_vector/gaming_rv)
list (APPEND PLUGIN_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/rotation_vector/gaming_rv/gaming_rv_sensor.cpp")
add_definitions(-DENABLE_GAMING_RV)
ENDIF()
IF("${RV_RAW}" STREQUAL "ON")
list (APPEND DIR_INCLUDE "${CMAKE_CURRENT_SOURCE_DIR}/rotation_vector/rv_raw")
include_directories(${CMAKE_SOURCE_DIR}/src/server/plugins/rotation_vector/rv_raw)
list (APPEND PLUGIN_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/rotation_vector/rv_raw/rv_raw_sensor.cpp")
ENDIF()

set(PLUGIN_SRCS ${PLUGIN_SRCS} PARENT_SCOPE)
set(DIR_INCLUDE ${DIR_INCLUDE} PARENT_SCOPE)

configure_file(sensor_module_create.cpp.in sensor_module_create.cpp)