cmake_minimum_required(VERSION 2.6)
project(sensord-plugins CXX)

INCLUDE(FindPkgConfig)
PKG_CHECK_MODULES(plugin_pkgs REQUIRED dlog libxml-2.0)

FOREACH(flag ${plugin_pkgs_LDFLAGS})
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${flag}")
ENDFOREACH(flag)

FOREACH(flag ${plugin_pkgs_CFLAGS})
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${flag}")
ENDFOREACH(flag)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")

include_directories(${CMAKE_CURRENT_SOURCE_DIR})
include_directories(${CMAKE_SOURCE_DIR}/src/server)
include_directories(${CMAKE_SOURCE_DIR}/src/shared)


IF("${AUTO_ROTATION}" STREQUAL "ON")
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/plugins/auto_rotation)
list (APPEND DIR_INCLUDE "${CMAKE_CURRENT_SOURCE_DIR}/auto_rotation")
list (APPEND PLUGIN_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/auto_rotation/auto_rotation_alg.cpp")
list (APPEND PLUGIN_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/auto_rotation/auto_rotation_alg_emul.cpp")
list (APPEND PLUGIN_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/auto_rotation/auto_rotation_sensor.cpp")
list (APPEND PLUGIN_DEFS "-DENABLE_AUTO_ROTATION")
ENDIF()

IF("${ORIENTATION}" STREQUAL "ON")
set(SENSOR_FUSION_ENABLE "1")
set(ORIENTATION_ENABLE "1")
ENDIF()
IF("${RV}" STREQUAL "ON")
set(SENSOR_FUSION_ENABLE "1")
set(RV_ENABLE "1")
ENDIF()
IF("${GEOMAGNETIC_RV}" STREQUAL "ON")
set(SENSOR_FUSION_ENABLE "1")
set(GEOMAGNETIC_RV_ENABLE "1")
ENDIF()
IF("${GAMING_RV}" STREQUAL "ON")
set(SENSOR_FUSION_ENABLE "1")
set(GAMING_RV_ENABLE "1")
ENDIF()
IF("${TILT}" STREQUAL "ON")
set(SENSOR_FUSION_ENABLE "1")
set(TILT_ENABLE "1")
ENDIF()
IF("${GYROSCOPE_UNCAL}" STREQUAL "ON")
set(SENSOR_FUSION_ENABLE "1")
set(GYROSCOPE_UNCAL_ENABLE "1")
ENDIF()
IF("${GRAVITY}" STREQUAL "ON")
set(SENSOR_FUSION_ENABLE "1")
set(ORIENTATION_ENABLE "1")
set(GRAVITY_ENABLE "1")
ENDIF()
IF("${LINEAR_ACCEL}" STREQUAL "ON")
set(SENSOR_FUSION_ENABLE "1")
set(ORIENTATION_ENABLE "1")
set(GRAVITY_ENABLE "1")
set(LINEAR_ACCEL_ENABLE "1")
ENDIF()

IF("${SENSOR_FUSION_ENABLE}" STREQUAL "1")
list (APPEND DIR_INCLUDE "${CMAKE_CURRENT_SOURCE_DIR}/sensor_fusion")
list (APPEND PLUGIN_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/sensor_fusion/euler_angles.cpp")
list (APPEND PLUGIN_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/sensor_fusion/matrix.cpp")
list (APPEND PLUGIN_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/sensor_fusion/orientation_filter.cpp")
list (APPEND PLUGIN_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/sensor_fusion/quaternion.cpp")
list (APPEND PLUGIN_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/sensor_fusion/rotation_matrix.cpp")
list (APPEND PLUGIN_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/sensor_fusion/sensor_data.cpp")
list (APPEND PLUGIN_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/sensor_fusion/vector.cpp")
list (APPEND DIR_INCLUDE "${CMAKE_CURRENT_SOURCE_DIR}/fusion")
list (APPEND PLUGIN_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/fusion/fusion_sensor.cpp")
list (APPEND PLUGIN_DEFS "-DENABLE_SENSOR_FUSION")
ENDIF()

IF("${ORIENTATION_ENABLE}" STREQUAL "1")
list (APPEND DIR_INCLUDE "${CMAKE_CURRENT_SOURCE_DIR}/orientation")
list (APPEND PLUGIN_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/orientation/orientation_sensor.cpp")
list (APPEND PLUGIN_DEFS "-DENABLE_ORIENTATION")
ENDIF()
IF("${GRAVITY_ENABLE}" STREQUAL "1")
list (APPEND DIR_INCLUDE "${CMAKE_CURRENT_SOURCE_DIR}/gravity")
list (APPEND PLUGIN_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/gravity/gravity_sensor.cpp")
list (APPEND PLUGIN_DEFS "-DENABLE_GRAVITY")
ENDIF()
IF("${LINEAR_ACCEL_ENABLE}" STREQUAL "1")
list (APPEND DIR_INCLUDE "${CMAKE_CURRENT_SOURCE_DIR}/linear_accel")
list (APPEND PLUGIN_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/linear_accel/linear_accel_sensor.cpp")
list (APPEND PLUGIN_DEFS "-DENABLE_LINEAR_ACCEL")
ENDIF()
IF("${TILT_ENABLE}" STREQUAL "1")
list (APPEND DIR_INCLUDE "${CMAKE_CURRENT_SOURCE_DIR}/tilt")
list (APPEND PLUGIN_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/tilt/tilt_sensor.cpp")
list (APPEND PLUGIN_DEFS "-DENABLE_TILT")
ENDIF()
IF("${GYROSCOPE_UNCAL_ENABLE}" STREQUAL "1")
list (APPEND DIR_INCLUDE "${CMAKE_CURRENT_SOURCE_DIR}/gyroscope_uncal")
list (APPEND PLUGIN_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/gyroscope_uncal/gyroscope_uncal_sensor.cpp")
list (APPEND PLUGIN_DEFS "-DENABLE_GYROSCOPE_UNCAL")
ENDIF()
IF("${RV_ENABLE}" STREQUAL "1")
list (APPEND DIR_INCLUDE "${CMAKE_CURRENT_SOURCE_DIR}/rotation_vector/rv")
list (APPEND PLUGIN_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/rotation_vector/rv/rv_sensor.cpp")
list (APPEND PLUGIN_DEFS "-DENABLE_RV")
ENDIF()
IF("${GEOMAGNETIC_RV_ENABLE}" STREQUAL "1")
list (APPEND DIR_INCLUDE "${CMAKE_CURRENT_SOURCE_DIR}/rotation_vector/geomagnetic_rv")
list (APPEND PLUGIN_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/rotation_vector/geomagnetic_rv/geomagnetic_rv_sensor.cpp")
list (APPEND PLUGIN_DEFS "-DENABLE_GEOMAGNETIC_RV")
ENDIF()
IF("${GAMING_RV_ENABLE}" STREQUAL "1")
list (APPEND DIR_INCLUDE "${CMAKE_CURRENT_SOURCE_DIR}/rotation_vector/gaming_rv")
list (APPEND PLUGIN_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/rotation_vector/gaming_rv/gaming_rv_sensor.cpp")
list (APPEND PLUGIN_DEFS "-DENABLE_GAMING_RV")
ENDIF()

set(PLUGIN_SRCS ${PLUGIN_SRCS} PARENT_SCOPE)
set(DIR_INCLUDE ${DIR_INCLUDE} PARENT_SCOPE)
set(PLUGIN_DEFS ${PLUGIN_DEFS} PARENT_SCOPE)

# Installing files
INSTALL(FILES virtual_sensors.xml virtual_sensors.xml DESTINATION etc)
